objects/SBQQ__FieldMetadata__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Extra metadata about the field that&apos;s not accessible via the API.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__FieldName__c</fullName>
        <description>API name of the field described by this record.</description>
        <inlineHelpText>Enter API name of the field.</inlineHelpText>
        <label>Field Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ObjectName__c</fullName>
        <description>API name of the object that contains the field described by this record.</description>
        <inlineHelpText>Enter API name of the object that contains the field.</inlineHelpText>
        <label>Object Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Field Metadata</label>
</CustomObject>